Fixed png not showing in pages

--- a/style.css
+++ b/style.css
@@ -192,5 +192,5 @@ table img {
   background-color:#ffa203;
 }
 img{
-	margin-right: 50px;"
+	margin-right: 50px;
 }
